tests/integration/error/assign_immutable_array_element.alo
// expect-error: Cannot assign to element of immutable array 'values'

fun main() -> void {
    imut values = [1, 2, 3];
    values[0] = 9;
}
